# EncryptedFileTransfer-Client

./: .gitignore  AESKey.cpp  AESKey.h  Base64.cpp  Base64.h  CMakeLists.txt  CRC.cpp  MeFile.cpp  MeFile.h  ProtocolHandler.cpp  ProtocolHandler.h  README.md  RSAKeys.cpp  RSAKeys.h  Request.cpp  Request.h  Session.cpp  Session.h  TransferFile.cpp  TransferFile.h  cksum.cpp  cksum.h  cksum_new.cpp  main.cpp  util.cpp  util.h
